tests/enums/enums.exp
Error -------------------------------------------------------------------------------------------- error-reassign.js:4:1

Cannot reassign enum `E` [1].

   error-reassign.js:4:1
   4| E = 0;
      ^

References:
   error-reassign.js:3:6
   3| enum E {}
           ^ [1]


Error ---------------------------------------------------------------------------------------------------- valid.js:8:14

Cannot get `E.A` because property `A` is missing in enum `E` [1].

   valid.js:8:14
   8| const a: E = E.A;
                   ^^^

References:
   valid.js:3:1
      v-------
   3| enum E {
   4|   A,
   5|   B,
   6| }
      ^ [1]



Found 2 errors
